# CG-Project3-RollerCoaster

./: CMakeLists.txt  README.md
include/glad/: glad.h
lib/: assimp-vc143-mtd.lib  glfw3.lib
src/: Camera.cpp  Camera.h  Light.cpp  Light.h  PostProcessing.cpp  PostProcessing.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  environment.cpp  environment.h  glad.c  imgui.ini  main.cpp  pixelization.cpp  pixelization.h  skybox.cpp  skybox.h  wave.cpp  wave.h
src/shaders/: environment.fs  environment.vs  fragment.glsl  pixelization.fs  skybox.vs  wave.fs  wave.vs
src/shaders/post_processings/: blur.fs  edgeDetection.fs  grayscale.fs  inversion.fs  pixelization.fs  postProcessing.vs  sharpen.fs
